--- a/src/app/pages/kittens/kittens.component.html
+++ b/src/app/pages/kittens/kittens.component.html
@@ -1,7 +1,11 @@
 <main class="main-grid-container">
     <section class="grid-itemList">
         <h1>Chatons disponibles</h1>
-        <app-imageslider [slides]="slides" style="width: 100%; height: 350px; margin: 0 auto;"></app-imageslider>
+        <app-imageslider 
+        [slides]="slides" 
+        style="width: 90%; height: 350px; margin: 2rem;">
+        </app-imageslider>
+
         <div class="grid-itemList-CardsContainer">
             @for (kitten of getServiceKittenAvailableKittens(); track $index) {
             <div class="grid-itemList-CardContainer">
