Commit kittens imageslider configuration changes

--- a/src/app/pages/kittens/kittens.component.html
+++ b/src/app/pages/kittens/kittens.component.html
@@ -3,7 +3,7 @@
         <h1>Chatons disponibles</h1>
         <app-imageslider 
         [slides]="slides" 
-        style="width: 90%; height: 350px; margin: 2rem;">
+        style="width: 100%; height: 350px; margin: 2rem auto;">
         </app-imageslider>
 
         <div class="grid-itemList-CardsContainer">
