--- a/src/app/components/imageslider/imageslider/imageslider.component.scss
+++ b/src/app/components/imageslider/imageslider/imageslider.component.scss
@@ -1,8 +1,10 @@
+
 .slider {
     position: relative;
     height: 100%;
     border: 2px solid lightgrey;
     border-radius: 10px;
+
 }
 
 .leftArrow {
@@ -34,10 +36,12 @@
 .slide {
     width: 100%;
     height: 100%;
-    border-radius: 10px;
+    border-radius: 50px;
     background-size: cover;
     background-position: center;
     border: 1px solid whitesmoke;
+    flex-shrink: 0;
+    overflow-x: auto;
 }
 
 .dotsContainer {
