--- a/src/app/pages/kittens/kittens.component.html
+++ b/src/app/pages/kittens/kittens.component.html
@@ -1,10 +1,37 @@
 <main class="main-grid-container">
     <section class="grid-itemList">
         <h1>Chatons disponibles</h1>
+
+        <style>
+            .swiper {
+            display: flex;
+            overflow-x: auto;
+            -webkit-overflow-scrolling: touch;
+            scroll-snap-points-x: repeat(300px);
+            scroll-snap-type: mandatory;
+        }
+        .swiped {
+            flex-shrink: 0;
+            width: 300px;
+            height: 300px;
+            line-height: 300px;
+            text-align: center;
+            background: #f0f0f0;
+            margin-right: 15px;
+            border-radius: 5px;
+        }
+        </style>
+        <div class="swiper">
+                @for (kitten of getServiceKittenAvailableKittens(); track $index) {
+                    <img class="swiped" src="{{kitten.image}}" alt="">
+                }
+        </div>
+
         <app-imageslider 
-        [slides]="slides" 
-        style="width: 100%; height: 350px; margin: 2rem auto;">
-        </app-imageslider>
+        style="width: 100%; height: 350px; margin: 2rem auto;"
+        [slides]="slides"
+        >
+         </app-imageslider>
 
         <div class="grid-itemList-CardsContainer">
             @for (kitten of getServiceKittenAvailableKittens(); track $index) {
