--- a/src/app/components/imageslider/imageslider/imageslider.component.html
+++ b/src/app/components/imageslider/imageslider/imageslider.component.html
@@ -4,7 +4,7 @@
         <div (click)="goToNext()" class="rightArrow">❱</div>
     </div>
     <div class="slide" 
-    [style.background-image]="getCurrentSlideUrl()">
+    [style.background-image]="getCurrentSlideUrl()" alt="cat">
     </div>
     <div class="dotsContainer">
         <div class="dot" *ngFor="let kitten of this.kittensImages; let slideIndex = index" (click)="goToSlide(slideIndex)">
