--- a/src/app/components/imageslider/imageslider/imageslider.component.scss
+++ b/src/app/components/imageslider/imageslider/imageslider.component.scss
@@ -38,6 +38,8 @@
     background-size: cover;
     background-position: center;
     border: 1px solid whitesmoke;
+
+    background-color: aqua;
 }
 
 .dotsContainer {
