Commit imagesslider changes - as placeholder background: conic-gradient(red, yellow, lime, aqua, blue, magenta, red);.

--- a/src/app/components/imageslider/imageslider/imageslider.component.scss
+++ b/src/app/components/imageslider/imageslider/imageslider.component.scss
@@ -38,8 +38,7 @@
     background-size: cover;
     background-position: center;
     border: 1px solid whitesmoke;
-
-    background-color: aqua;
+    background: conic-gradient(red, yellow, lime, aqua, blue, magenta, red);
 }
 
 .dotsContainer {
