--- a/src/app/components/imageslider/imageslider/imageslider.component.html
+++ b/src/app/components/imageslider/imageslider/imageslider.component.html
@@ -3,20 +3,18 @@
         <div (click)="goToPrevious()" class="leftArrow">❰</div>
         <div (click)="goToNext()" class="rightArrow">❱</div>
     </div>
-    @defer (on viewport) {
-    <div class="slide" 
-    [style.background-image]="getCurrentSlideUrl()"
-    >
+    @defer (when getCurrentSlideUrl()) {
+    <div class="slide" [style.background-image]="getCurrentSlideUrl()">
     </div>}
     @placeholder {
-        <div class="slide" 
-    style="background-image: 'https://fr.wikipedia.org/wiki/Angular#/media/Fichier:Angular_full_color_logo.svg'"
-    >
+    <div class="slide">
+        <div class="sun">loading...</div>
     </div>
     }
 
     <div class="dotsContainer">
-        <div class="dot" *ngFor="let kitten of this.kittensImages; let slideIndex = index" (click)="goToSlide(slideIndex)">
+        <div class="dot" *ngFor="let kitten of this.kittensImages; let slideIndex = index"
+            (click)="goToSlide(slideIndex)">
             ●
         </div>
     </div>
