--- a/src/app/components/imageslider/imageslider/imageslider.component.scss
+++ b/src/app/components/imageslider/imageslider/imageslider.component.scss
@@ -61,33 +61,18 @@
     border-radius: 50%;
 
     aspect-ratio: 1 / 1;
-
-    /* multiple animations are separated by commas, each animation's parameters are set independently */
     animation:
-        4s linear 0s infinite alternate rise,
-        24s linear 0s infinite psychedelic;
+        4s linear 5s infinite alternate rise,
+        4s linear 5s infinite psychedelic;
 }
-
 @keyframes rise {
-    from {
-        transform: translateY(110vh);
-    }
-
-    to {
-        transform: translateY(0);
-    }
+    from {        transform: translateY(25vh);    }
+    to {        transform: translateY(0);    }
 }
-
 @keyframes psychedelic {
-    from {
-        filter: hue-rotate(0deg);
-    }
-
-    to {
-        filter: hue-rotate(360deg);
-    }
+    from {        filter: hue-rotate(30deg);    }
+    to {        filter: hue-rotate(360deg);    }
 }
-
 
 
 .dotsContainer {
