--- a/src/app/components/form/form/form.component.html
+++ b/src/app/components/form/form/form.component.html
@@ -1,10 +1,10 @@
 
 <form #myForm="ngForm" (ngSubmit)="onSubmit(myForm)">
-    <button [disabled]="isSignin" [ngClass]="btnStyle" (click)="signOnUp()">{{btnSignIn}}</button>
-    <button [disabled]="!isSignin" [ngClass]="btnStyle"  (click)="signOnUp()">{{btnSignUp}}</button>
+    <button [disabled]="!isSignin" class="btnSignInStyle" (click)="signOnUp()">{{btnSignIn}}</button>
+    <button [disabled]="isSignin" class="btnSignUpStyle"  (click)="signOnUp()">{{btnSignUp}}</button>
 
     <div>
-        <!-- Form check -->
+        <!-- TO REMOVE (dead note) - Form check -->
         @if (myForm.invalid) {
         <em class="msgColorAlert">Formulaire à completer</em>
         } @else if (!myForm.submitted) {
@@ -15,13 +15,13 @@
         }
     </div>
 
-    <!-- Firstname/Name-->
+    <!-- TO REMOVE (dead note) - Firstname/Name-->
     <fieldset *ngIf="isSignin">
         <label for="fname">{{l_usrFName_aName}} </label>
         <input id="fname" name="fname" type="text" [(ngModel)]="e_usrFName_aName" #fname="ngModel" required
             minlength="2" maxlength="20" placeholder="{{p_usrFName_aName}} ">
 
-        <!-- Vérification et message d'erreur, alerte couleur sur le champ Kitten name -->
+        <!-- TO REMOVE (dead note) - Vérification et message d'erreur, alerte couleur sur le champ Kitten name -->
         <div *ngIf="fname.errors; elseTitle">
             <em *ngIf="fname.errors?.['required']" class="msgColorAlert">le champ titre est requis</em>
             <em *ngIf="fname.errors?.['minlength']" class="msgColorAlert">la longueur minimale doit être supérieure à
@@ -31,13 +31,13 @@
         </div>
     </fieldset>
 
-    <!-- Lastname/Breed-->
+    <!-- TO REMOVE (dead note) - Lastname/Breed-->
     <fieldset *ngIf="isSignin">
         <label for="lname">{{l_usrLName_aRace}} </label>
         <input id="lname" name="lname" type="text" [(ngModel)]="e_usrLName_aRace" #lname="ngModel" required
             minlength="2" maxlength="20" placeholder="{{p_usrLName_aRace}} ">
 
-        <!-- Vérification et message d'erreur, alerte couleur sur le champ Kitten name -->
+        <!-- TO REMOVE (dead note) - Vérification et message d'erreur, alerte couleur sur le champ Kitten name -->
         <div *ngIf="lname.errors; elseTitle">
             <em *ngIf="lname.errors?.['required']" class="msgColorAlert">le champ titre est requis</em>
             <em *ngIf="lname.errors?.['minlength']" class="msgColorAlert">la longueur minimale doit être supérieure à
@@ -47,28 +47,28 @@
         </div>
     </fieldset>
 
-    <!-- login/mot de passe-->
-    <!-- Champ email -->
+    <!-- TO REMOVE (dead note) - login/mot de passe-->
+    <!-- TO REMOVE (dead note) - Champ email -->
     <fieldset>
         <label this.isLogin for="uemail">E-mail </label>
         <input this.isLogin id="uemail" name="uemail" type="email" [(ngModel)]="e_usrEmail" #email="ngModel" required
             email>
 
-        <!-- Vérification et message d'erreur, alerte couleur -->
+        <!-- TO REMOVE (dead note) - Vérification et message d'erreur, alerte couleur -->
         <div *ngIf="email.errors">
             <span *ngIf="email.errors?.['required']" class="msgColorAlert">Le champ email est requis</span>
             <span *ngIf="email.errors?.['email']" class="msgColorAlert">L'adresse email doit être valide</span>
         </div>
     </fieldset>
 
-    <!-- Champ Mot de passe -->
+    <!-- TO REMOVE (dead note) - Champ Mot de passe -->
     <fieldset>
         <label for="upwd">Mot de passe </label>
         <input id="upwd" name="upwd" type="password" [(ngModel)]="e_usrPassword" #password="ngModel" required
             minlength="8">
 
 
-        <!-- Vérification et message d'erreur, alerte couleur -->
+        <!-- TO REMOVE (dead note) - Vérification et message d'erreur, alerte couleur -->
         <div *ngIf="password.errors">
             <span *ngIf="password.errors?.['required']" class="msgColorAlert">Le champ mot de passe est requis</span>
             <span *ngIf="password.errors?.['password']" class="msgColorAlert">Le mot de passe doit être valide</span>
@@ -77,45 +77,45 @@
                 8</span>
         </div>
     </fieldset>
-    <!-- fin login/mot de passe-->
+    <!-- TO REMOVE (dead note) - fin login/mot de passe-->
 
-    <!-- sex -->
+    <!-- TO REMOVE (dead note) - sex -->
     <fieldset *ngIf="isSignin">
         <legend>Sexe </legend>
         <label for="male">{{l_usr_aMSex}} </label>
         <input id="male" type="radio" name="radio" value="male" [(ngModel)]="e_usr_aSex" #user_sex="ngModel" />
         <label for="female">{{l_usr_aFSex}} </label>
         <input id="female" type="radio" name="radio" value="female" [(ngModel)]="e_usr_aSex" #user_sex="ngModel" />
-        <!-- Vérification et message d'erreur, alerte couleur sur le champ Kitten race -->
+        <!-- TO REMOVE (dead note) - Vérification et message d'erreur, alerte couleur sur le champ Kitten race -->
         <div *ngIf="user_sex.errors, elseQuantity">
             <em *ngIf="user_sex.errors?.['required']" class="msgColorAlert">la selection sex est requis</em>
         </div>
     </fieldset>
 
-    <!-- Birthday -->
+    <!-- TO REMOVE (dead note) - Birthday -->
     <fieldset *ngIf="isSignin">
         <label for="kitten-birthday-date">Date de naissance </label>
         <input id="kitten-birthday-date" name="kitten-birthday" type="date" [(ngModel)]="e_usr_aBirthday"
             #birthdayDateKitten="ngModel" required><em class="msgColorAlert">{{e_usr_aBirthday |
             date:'dd-MM-yyyy'}}</em>
-        <!-- Vérification and Message d'erreurs de date -->
+        <!-- TO REMOVE (dead note) - Vérification and Message d'erreurs de date -->
         <div *ngIf="birthdayDateKitten.errors, elseDate"><em *ngIf="birthdayDateKitten.errors?.['required']"
                 class="msgColorAlert">Le champ date est requis</em>
         </div>
     </fieldset>
 
-    <!-- Picture -->
+    <!-- TO REMOVE (dead note) - Picture -->
     <fieldset *ngIf="isSignin">
         <label for="kitten-picture">Photo </label>
         <input id="kitten-picture" name="kitten-picture" type="text" [(ngModel)]="e_usr_aPicture"
             #pictureKitten="ngModel" required placeholder="{{p_usr_aPicture}} ">
-        <!-- Vérification and Message d'erreurs de contact -->
+        <!-- TO REMOVE (dead note) - Vérification and Message d'erreurs de contact -->
         <div *ngIf="pictureKitten.errors,  elseContact"><em *ngIf="pictureKitten.errors?.['required']"
                 class="msgColorAlert">le champ image est requis</em>
         </div>
     </fieldset>
 
-    <!-- Boutons reset, submit -->
+    <!-- TO REMOVE (dead note) - Boutons reset, submit -->
     <button type="reset">Effacer</button>
-    <button type="submit" [disabled]="myForm.invalid" [ngClass]="btnStyle">Envoyer</button>
+    <button type="submit" [disabled]="myForm.invalid" [ngClass]="btnSubmitStyle">Envoyer</button>
 </form>
