Commit submit button label - by default signin fr label set and button label change according to the form (connection or subscribe) is set

--- a/src/app/components/form/form/form.component.html
+++ b/src/app/components/form/form/form.component.html
@@ -117,5 +117,5 @@
 
     <!-- TO REMOVE (dead note) - Boutons reset, submit -->
     <button type="reset">Effacer</button>
-    <button type="submit" [disabled]="myForm.invalid" [ngClass]="btnSubmitStyle">Envoyer</button>
+    <button type="submit" [disabled]="myForm.invalid" >{{btnSubmitStyle}}</button>
 </form>
